--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
     </div>
   </section>
 
-    <!-- SECTION: Продажа -->
-<section id="projects" class="max-w-7xl mx-auto px-2 pt-14 pb-0">
+<!-- SECTION: Продажа -->
+<!-- <section id="projects" class="max-w-7xl mx-auto px-2 pt-14 pb-0">
   <div class="flex flex-wrap items-center justify-between mb-10">
     <h2 class="font-mont text-3xl md:text-4xl font-bold text-blue-800" data-aos="fade-right">Дома в Бледе</h2>
     <p class="text-gray-600 ml-4" data-aos="fade-left">Дома которые доступны для покупки</p>
@@ -383,10 +383,10 @@
       Все пердложения <i class="fas fa-arrow-right ml-2"></i>
     </a>
   </div>
-</section>
+</section> -->
 
 <!-- SECTION: Земельные участки -->
-<section id="land" class="max-w-7xl mx-auto px-2 pt-14 pb-0">
+<!-- <section id="land" class="max-w-7xl mx-auto px-2 pt-14 pb-0">
   <div class="flex flex-wrap items-center justify-between mb-10">
     <h2 class="font-mont text-3xl md:text-4xl font-bold text-blue-800" data-aos="fade-right">Земельные участки</h2>
     <p class="text-gray-600 ml-4" data-aos="fade-left">Продажа земельных участков</p>
@@ -399,7 +399,7 @@
       Все пердложения <i class="fas fa-arrow-right ml-2"></i>
     </a>
   </div>
-</section>
+</section> -->
   
   <!-- О компании -->
   <section id="about" class="max-w-5xl mx-auto my-20 px-4 py-9 rounded-2xl shadow-2xl bg-gradient-to-tr from-blue-100 via-white to-teal-100" data-aos="fade-up" data-aos-delay="60">
