--- a/proposals/template.html
+++ b/proposals/template.html
@@ -204,8 +204,7 @@
 
   <!-- ElevenLabs Convai Widget -->
   <elevenlabs-convai agent-id="agent_01jz05jddyec8afxxwt9b2pzdx"></elevenlabs-convai>
-  <script data-cfasync="false" src="https://cdn.jsdelivr.net/npm/email-decode/dist/email-decode.min.js"></script>
-  <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
   <!-- AOS init -->
   <script>
