--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       Все пердложения <i class="fas fa-arrow-right ml-2"></i>
     </a>
   </div>
-</section> -->
+</section> 
 
 <!-- SECTION: Земельные участки -->
 <section id="land" class="max-w-7xl mx-auto px-2 pt-14 pb-0">
