--- a/index.html
+++ b/index.html
@@ -493,8 +493,12 @@
       Все пердложения <i class="fas fa-arrow-right ml-2"></i>
     </a>
   </div>
-</section> -->
-  <!-- SECTION: Продажа: Дома у моря -->
+</section>
+  
+  <!-- SECTION: Продажа: Дома у моря -->
+  <!-- CARDS: SEA_HOUSE -->
+  <section id="sea-house"></section>
+
   <!-- О компании -->
   <section id="about" class="max-w-5xl mx-auto my-20 px-4 py-9 rounded-2xl shadow-2xl bg-gradient-to-tr from-blue-100 via-white to-teal-100" data-aos="fade-up" data-aos-delay="60">
       <div class="flex flex-col md:flex-row items-center justify-between">
