--- a/index.html
+++ b/index.html
@@ -290,6 +290,44 @@
     </div> 
   </section>
 
+    <section class="max-w-7xl mx-auto px-2 pt-8 pb-0">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="blur-bg rounded-2xl shadow-xl p-0" data-aos="zoom-in" data-aos-delay="50">
+        <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/krupa8.jpg?auto=format&fit=crop&w=600&q=80" alt="Проект 1" class="w-full project-img h-48 rounded-t-2xl transition-transform duration-300 hover:scale-105">
+        <div class="p-5">
+          <h3 class="font-mont text-xl font-bold text-teal-800">Старая мельница на реке Крупа</h3>
+          <p class="text-gray-700 mt-1">Уникальное поместье, расположенное у излучины кристально чистой реки Крупа</p>
+          <div class="flex items-center mt-2">
+            <span class="font-mont text-lg text-blue-500 font-bold mr-1">€350 000</span>
+            <a href="https://krupa.miraginvest.com/" class="ml-auto bg-gradient-to-r from-pink-400 to-blue-400 text-white rounded-full px-6 py-2 font-semibold shadow-lg hover:from-blue-400 hover:to-teal-400 transition-colors duration-250">Подробнее</a>
+          </div>
+        </div>
+      </div>
+    <!--   <div class="blur-bg rounded-2xl shadow-xl p-0" data-aos="zoom-in" data-aos-delay="100">-->
+    <!--    <img src="https://kapralov-grad.miraginvest.com/3d.jpg?auto=format&fit=crop&w=600&q=80" alt="Проект 2" class="w-full project-img h-48 rounded-t-2xl transition-transform duration-300 hover:scale-105">-->
+    <!--    <div class="p-5">-->
+    <!--      <h3 class="font-mont text-xl font-bold text-pink-700">Замок Трате</h3>-->
+    <!--      <p class="text-gray-700 mt-1">Уникальный исторический комплекс на границе с Австрией.</p>-->
+    <!--      <div class="flex items-center mt-2">-->
+    <!--        <span class="font-mont text-lg text-blue-500 font-bold mr-1">€900 000</span>-->
+    <!--        <a href="https://kapralov-grad.miraginvest.com/" class="ml-auto bg-gradient-to-r from-purple-400 to-teal-400 text-white rounded-full px-6 py-2 font-semibold shadow-lg hover:from-teal-400 hover:to-pink-400 transition-colors duration-250">Подробнее</a>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--  </div>   -->
+    <!--  <div class="blur-bg rounded-2xl shadow-xl p-0" data-aos="zoom-in" data-aos-delay="150">-->
+    <!--    <img src="https://trnovo.miraginvest.com/trnovo3d.jpg?auto=format&fit=crop&w=600&q=80" alt="Проект 3" class="w-full project-img h-48 rounded-t-2xl transition-transform duration-300 hover:scale-105">-->
+    <!--    <div class="p-5">-->
+    <!--      <h3 class="font-mont text-xl font-bold text-blue-800">Индивидуальный жилой дом в Prule, Ljubljana</h3>-->
+    <!--      <p class="text-gray-700 mt-1">Инвестиционный участок с разрешением в центре Любляны</p>-->
+    <!--      <div class="flex items-center mt-2">-->
+    <!--        <span class="font-mont text-lg text-blue-500 font-bold mr-1">€407 000</span>-->
+    <!--        <a href="https://trnovo.miraginvest.com/" class="ml-auto bg-gradient-to-r from-green-400 to-blue-400 text-white rounded-full px-6 py-2 font-semibold shadow-lg hover:from-blue-400 hover:to-green-400 transition-colors duration-250">Подробнее</a>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</div> -->
+  </section>
+
   <!-- Галерея природы/архитектуры -->
   <section class="max-w-7xl mx-auto py-10 px-2">
     <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-6">
