--- a/proposals/6387983/index.html
+++ b/proposals/6387983/index.html
@@ -13,10 +13,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Самостoйный дом Бодешче — Бодешче, Гореньская | 445000 €</title>
-  <meta name="description" content="Самостoйный дом Бодешче в Бодешче, район Гореньская. Площадь: 400 м². Стоимость: 445000 €.">
+  <meta name="description" content="Дом Бодешче в Бодешче, район Гореньская. Площадь: 400 м². Стоимость: 445000 €.">
 
-  <meta property="og:title" content="Самостoйный дом Бодешче — Бодешче, Гореньская | 445000 €">
-  <meta property="og:description" content="Самостoйный дом Бодешче в Бодешче, район Гореньская. Площадь: 400 м². Стоимость: 445000 €.">
+  <meta property="og:title" content="Дом Бодешче — Бодешче, Гореньская | 445000 €">
+  <meta property="og:description" content="Дом Бодешче в Бодешче, район Гореньская. Площадь: 400 м². Стоимость: 445000 €.">
   <meta property="og:type" content="article">
   <meta property="og:locale" content="ru_RU">
   <meta property="og:image" content="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80">
