--- a/proposals/6387983/index.html
+++ b/proposals/6387983/index.html
@@ -12,7 +12,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Самостoйный дом Бодешче — Бодешче, Гореньская | 445000 €</title>
+  <title>Дом Бодешче — Бодешче, Гореньская | 445000 €</title>
   <meta name="description" content="Дом Бодешче в Бодешче, район Гореньская. Площадь: 400 м². Стоимость: 445000 €.">
 
   <meta property="og:title" content="Дом Бодешче — Бодешче, Гореньская | 445000 €">
